# opti-proyecto1

./: .gitignore  1947-4700-CM24.json  1947-5025-CM24.json  1947-5064-AG24.json  README.md  datos1.json  datos10.json  datos2.json  datos3.json  datos4.json  datos5.json  datos6.json  datos7.json  datos8.json  datos9.json  main.py  pyproject.toml  test.json  test2.json
