[tool.poetry]
name = "opti-proyecto1"
version = "0.1.0"
description = ""
authors = ["Esteban Glochon <esteban.glochon@usach.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pulp = "^2.9.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
